--- a/static/css/style.css
+++ b/static/css/style.css
@@ -93,7 +93,7 @@ main {
 .form-container {
   max-width: 500px;
   margin: 2rem auto;
-  background: #fff;
+  background:var(--card-background);
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0,0,0,0.1);
   padding: 2rem;
@@ -116,6 +116,7 @@ main {
   border-radius: 4px;
   font-size: 1rem;
   transition: border-color 0.3s ease;
+  
 }
 
 /* CSS untuk modal */
@@ -173,15 +174,6 @@ main {
   overflow: auto;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
-}
-
-.modal-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-  max-width: 600px;
 }
 
 .close {
@@ -252,7 +244,7 @@ header nav ul li a:hover {
 
 /* Modal konten */
 .modal-content {
-  background-color: #fefefe;
+  background-color: var(--card-background);
   margin: 15% auto; /* Tempatkan di tengah layar */
   padding: 20px;
   border: 1px solid #888;
